Update IO, Kernel and ARGV

--- a/articles/1.md
+++ b/articles/1.md
@@ -44,13 +44,24 @@ However, it works with strings, symbols and arrays (and most of the other litera
 
 ```ruby
 puts'Hello!'if[].length<4
-#=> Hello!
+# Hello!
 
 puts'Hello!'if:s.class==Symbol
-#=> Hello!
+# Hello!
 
 puts'Hello!'if'string'.bytesize>4
-#=> Hello!
+# Hello!
+```
+
+Another exception is with global variables:
+
+```ruby
+$a=5
+puts'Hello!'if$a>4
+puts$a
+
+# Hello!
+# 5
 ```
 
 ## Eliminate parentheses <a name="eliminate_parentheses"></a>
@@ -110,13 +121,13 @@ Quite a simple one, but you'll always want to use single letter variable names. 
 string='This is code-golf!'
 string_length=string.length
 string_length.times{|i|print string[i]}
-#=> "This is code-golf!"
+# This is code-golf!
 
 # To 56 bytes
 s='This is code-golf!'
 l=s.length
 l.times{|i|print s[i]}
-#=> "This is code-golf!"
+# This is code-golf!
 ```
 
 Watch out though, some UTF-8 characters have more bytes than others, but can still be used as variable names:
@@ -125,12 +136,12 @@ Watch out though, some UTF-8 characters have more bytes than others, but can sti
 # From 30 bytes
 𠜎='𠜎'
 puts 𠜎.bytesize
-#=> 4
+# 4
 
 # To 21 bytes
 a='a'
 puts a.bytesize
-#=> 1
+# 1
 ```
 
 Always use ASCII letters for your variable names!
@@ -170,10 +181,10 @@ end
 Testing with the integers from 1 to 10 proves that these methods are all equivalent:
 
 ```ruby
-(1..10).map{|i|print a i} #=> nynynyyyyy
-(1..10).map{|i|print b i} #=> nynynyyyyy
-(1..10).map{|i|print c i} #=> nynynyyyyy
-(1..10).map{|i|print d i} #=> nynynyyyyy
+(1..10).map{|i|print a i} # nynynyyyyy
+(1..10).map{|i|print b i} # nynynyyyyy
+(1..10).map{|i|print c i} # nynynyyyyy
+(1..10).map{|i|print d i} # nynynyyyyy
 ```
 
 Looking at `a`, we can see that this is quite a straightforward method, but we don't have to use any `return` statements. This is because the last evaluated expression is either `y` or `n` depending on whether the condition is met or not, and Ruby always returns the last evaluated expression:
