--- a/articles/2.md
+++ b/articles/2.md
@@ -38,7 +38,7 @@ block = {puts 'Block!'}
 Blocks can only be passed into methods, and can also have parameters (as seen with the `map` example below):
 
 ```ruby
-3.times {print '3'} #=> 333
+3.times {print '3'} # 333
 [1,2,3].map {|x| x**2} #=> [1,4,9]
 ```
 
@@ -90,16 +90,16 @@ end
 # Lambda call
 a['@']
 
-#=> @@@
-#=> @ @
-#=> @@@
+# @@@
+# @ @
+# @@@
 
 # Method call
 b'@'
 
-#=> @@@
-#=> @ @
-#=> @@@
+# @@@
+# @ @
+# @@@
 ```
 
 However, do note that actually calling the lambda does add two more bytes thanks to having to call with `[]`.
@@ -194,9 +194,9 @@ As you can see though, in a lot of these kinds of cases, it's almost always bett
 
 ```ruby
 # 45 bytes
-['1.txt','2.txt','3.txt'].map{|f|File.read f}
+['1.txt', '2.txt', '3.txt'].map{|f|File.read f}
 # 49 bytes
-['1.txt','2.txt','3.txt'].map &File.method(:read)
+['1.txt', '2.txt', '3.txt'].map &File.method(:read)
 ```
 
 ```ruby
@@ -212,12 +212,12 @@ The only situation where this may be useful is when you'll have to use the same 
 
 ```ruby
 # 85 bytes
-[1,2**64,3**64].map{|x|Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt x}
+[1, 2**64, 3**64].map{|x|Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt x}
 #=> [1.0, 2.0, 3.0]
 
 # 81 bytes
 s=Math.method:sqrt
-[1,2**64,3**64].map(&s).map(&s).map(&s).map(&s).map(&s).map &s
+[1, 2**64, 3**64].map(&s).map(&s).map(&s).map(&s).map(&s).map &s
 #=> [1.0, 2.0, 3.0]
 ```
 
