Simple -> simply typo

--- a/articles/3.md
+++ b/articles/3.md
@@ -28,7 +28,7 @@ a['hello','world']
 # helloworld
 ```
 
-However, the program below can take arguments via command line. You simple list the arguments after the Ruby file like `$ ruby b.rb hello world `:
+However, the program below can take arguments via command line. You simply list the arguments after the Ruby file like `$ ruby b.rb hello world `:
 
 ```ruby
 # b.rb
