Fix bash code sections

--- a/articles/3.md
+++ b/articles/3.md
@@ -40,6 +40,10 @@ puts ARGV[0]+ARGV[1]
 # 14 bytes
 puts ARGV.join
 # helloworld
+
+# 12 bytes
+puts ARGV*''
+# helloworld
 ```
 
 By simply using command line arguments, we saved ourselves quite a few bytes, and there are even more tricks we can use to save bytes.
@@ -62,12 +66,12 @@ p ARGV.reverse
 
 ```bash
 $ ruby file.rb
-# 0
-# []
+0
+[]
 
 $ ruby file.rb hello world
-# 2
-# ["world","hello"]
+2
+["world","hello"]
 ```
 
 However, note that all command line arguments are read as strings, so don't try using different types:
@@ -79,7 +83,7 @@ p ARGV.map &:class
 
 ```bash
 $ ruby golf.rb "say" :hello 2 world
-# [String, String, String, String]
+[String, String, String, String]
 ```
 
 ## IO <a name="io"></a>
@@ -382,7 +386,7 @@ Examples of situations where these global variables would be useful:
   #=> #<IO:<STDOUT>>
   ```
 
-  But remember the problem we had with eliminating the space after `print` for numeric types like `print1.4`, `print3`, or even arrays like `print['hi']` and `print%w(hello world).length`? Well `$><<` can handle that removed space just fine, saving one byte each time:
+  But remember the problem we had with eliminating the space after `print` for numeric types like `print1.4`, `print3`, or even arrays like `print['hi']` and `print%w(hello world).length`? Well `$><<` can handle that removed space just fine, saving two bytes each time:
 
   ```ruby
   $><<1.4
