Update strings, symbols, regex

--- a/articles/1.md
+++ b/articles/1.md
@@ -133,12 +133,17 @@ l.times{|i|print s[i]}
 Watch out though, some UTF-8 characters have more bytes than others, but can still be used as variable names:
 
 ```ruby
-# From 30 bytes
+# 30 bytes
 𠜎='𠜎'
 puts 𠜎.bytesize
 # 4
 
-# To 21 bytes
+# 27 bytes
+﷽='﷽'
+puts ﷽.bytesize
+# 3
+
+# 21 bytes
 a='a'
 puts a.bytesize
 # 1
