--- a/articles/3.md
+++ b/articles/3.md
@@ -127,6 +127,9 @@ A few global variables (denoted by `$`) are used in the explanations and example
   p
   #=> nil
 
+  !p
+  #=> true
+
   p 'hello'
   # "hello"
   #=> "hello"
