Add inline code to titles

--- a/articles/2.md
+++ b/articles/2.md
@@ -8,7 +8,7 @@
 
 - [Methods](#methods)
 - [Blocks, lambdas (and procs?)](#blocks,_lambdas_(and_procs?))
-- [Shortening maps by using & and to_proc](#shortening_maps_by_using_&_and_to_proc)
+- [Shortening maps by using `&` and `to_proc`](#shortening_maps_by_using_&_and_to_proc)
 
 ---
 
@@ -104,7 +104,7 @@ b'@'
 
 However, do note that actually calling the lambda does add two more bytes thanks to having to call with `[]`.
 
-## Shortening maps by using & and to_proc <a name="shortening_maps_by_using_&_and_to_proc"></a>
+## Shortening maps by using `&` and `to_proc` <a name="shortening_maps_by_using_&_and_to_proc"></a>
 
 The typical *Ruby* way of iterating through arrays is to use the `each` method:
 
