--- a/articles/3.md
+++ b/articles/3.md
@@ -10,8 +10,8 @@
 - [ARGV](#argv)
 - [IO](#io)
 - [Kernel](#kernel)
-- [Kernel - print, puts and p](#kernel_-_print,_puts_and_p)
-- [Kernel - gets and chomp](#kernel_-_gets_and_chomp)
+- [Kernel - `print`, `puts` and `p`](#kernel_-_print,_puts_and_p)
+- [Kernel - `gets` and `chomp`](#kernel_-_gets_and_chomp)
 - [Kernel - global variables](#kernel_-_global_variables)
 
 ---
@@ -98,7 +98,7 @@ Though `IO` also deals with input and output, it's often the methods from the `K
 
 For example (as explained in the blog post above), every Ruby programmer has probably used `puts` to print output with a newline after it. `puts` is actually a method from the `Kernel` module, i.e. `Kernel#puts`, and this method is essentially just the short-hand version of `$stdout.puts`, where `$stdout` is simply a global variable that references the `STDOUT` constant in the the `IO` class.
 
-## Kernel - print, puts and p <a name="kernel_-_print,_puts_and_p"></a>
+## Kernel - `print`, `puts` and `p` <a name="kernel_-_print,_puts_and_p"></a>
 
 `Kernel#print`, `Kernel#puts` and `Kernel#p` are all methods used for output.
 
@@ -177,7 +177,7 @@ A few global variables (denoted by `$`) are used in the explanations and example
     # [1, "hello", :world]
     ```
 
-## Kernel - gets and chomp <a name="kernel_-_gets_and_chomp"></a>
+## Kernel - `gets` and `chomp` <a name="kernel_-_gets_and_chomp"></a>
 
 - `gets` is another useful method for getting input. When `gets` is called in the command line, Ruby waits for input from the user. Once enter is pressed, `gets` reads the input given by the user, and adds the newline `'\n'` (or `$/`) from the `Enter` press at the end:
 
