--- a/articles/4.md
+++ b/articles/4.md
@@ -2,14 +2,14 @@
 
 # Strings, symbols and regular expressions
 
-*Quick tips such as interpolation to cut down on bytes wherever strings are involved, and understanding search patterns and the Regexp class.*
+*Quick tips such as interpolation to cut down on bytes wherever strings are involved, and understanding search patterns and the `Regexp` class.*
 
 ------
 
 - [String interpolation over concatenation](#string_interpolation_over_concatenation)
 - [Interpolate with instance variables](#interpolate_with_instance_variables)
-- [Use % notation](#use_%_notation)
-- [Use ? for ASCII characters](#use_?_for_ascii_characters)
+- [Use `%` notation](#use_%_notation)
+- [Use `?` for ASCII characters](#use_?_for_ascii_characters)
 - [Use `chars` instead of `split`](#use_chars_instead_of_split)
 - [Split strings without using a parameter](#split_strings_without_using_a_parameter)
 - [Use symbols when appropriate](#use_symbols_when_appropriate)
@@ -87,7 +87,7 @@ puts"The value of #@a+#@b-#@c is #{@a+@b+@c}".
 # The value of 1+2-3 is 0.
 ```
 
-## Use % notation <a name="use_%_notation"></a>
+## Use `%` notation <a name="use_%_notation"></a>
 
 Ruby has a useful way to quote strings, inspired by Perl. This is done by using `%` followed by a non-alphanumeric delimiter such as `{}`, `[]`, `()`, `<>`, or even `??` or `--`. But if using any of the bracket delimiters, then those same delimiters can appear *unescaped* in the string as long as they are in *balanced* pairs:
 
@@ -109,7 +109,7 @@ p %<"Shoo!" said Mr. Dursley <loudly><.>
 #=> unterminated string meets end of file (SyntaxError)
 ```
 
-## Use ? for ASCII characters <a name="use_?_for_ascii_characters"></a>
+## Use `?` for ASCII characters <a name="use_?_for_ascii_characters"></a>
 
 For single ASCII characters (`0-127`), we can use the precede the character by `?` to declare a string, rather than surrounding the character by `''`, saving one byte:
 
