Add output to Use ? for characters

--- a/articles/4.md
+++ b/articles/4.md
@@ -121,9 +121,11 @@ For single ASCII characters (`0-127`), we can use the precede the character by `
 ```ruby
 # 26 bytes
 ('a'..'z').map{|x|print x}
+# abcdefghijklmnopqrstuvwxyz
 
 # 24 bytes
 (?a..?z).map{|x|print x}
+# abcdefghijklmnopqrstuvwxyz
 ```
 
 ## Use `chars` instead of `split` <a name="use_chars_instead_of_split"></a>
