is is -> is typo

--- a/articles/4.md
+++ b/articles/4.md
@@ -177,7 +177,7 @@ p :a, 'a'
 
  ## Optimize length conditionals <a name="optimize_length_conditionals"></a>
 
-Though this concerns strings, it also applies to arrays. Suppose we want to print `"that's a long string"` if a given string is longer than 8 characters, or `"that's a short string"` otherwise. For a string `s`, we can do `s[8]` instead of `s.length>8` to check whether the length is greater than 8, because if the string length is less than 8 characters long, `s[8]` evaluates to `nil`, which is is a falsey value:
+Though this concerns strings, it also applies to arrays. Suppose we want to print `"that's a long string"` if a given string is longer than 8 characters, or `"that's a short string"` otherwise. For a string `s`, we can do `s[8]` instead of `s.length>8` to check whether the length is greater than 8, because if the string length is less than 8 characters long, `s[8]` evaluates to `nil`, which is a falsey value:
 
 ```ruby
 A='code-golf'
