Add output to Use % notation

--- a/articles/4.md
+++ b/articles/4.md
@@ -94,12 +94,15 @@ Ruby has a useful way to quote strings, inspired by Perl. This is done by using 
 ```ruby
 # 68 bytes - must use backslashes to escape quotes
 p "\"Shoo!\" said Mr. Dursley (loudly). \"No!\" said Harry, boldly."
+# "\"Shoo!\" said Mr. Dursley (loudly). \"No!\" said Harry, boldly."
 
 # 65 bytes
 p %{"Shoo!" said Mr. Dursley {loudly}. "No!" said Harry, boldly.}
+# "\"Shoo!\" said Mr. Dursley {loudly}. \"No!\" said Harry, boldly."
 
 # 65 bytes
 p %<"Shoo!" said Mr. Dursley {loudly}. "No!" said Harry, boldly.>
+# "\"Shoo!\" said Mr. Dursley {loudly}. \"No!\" said Harry, boldly."
 ```
 
 But any brackets within the string that match the delimiter, must be in matching pairs:
