Fix '' around ∄golf symbol

--- a/articles/4.md
+++ b/articles/4.md
@@ -212,22 +212,22 @@ g[B]
 To find out whether one string contains a single character, avoid using regex and the match operator `=~`, and instead just use `[]` on the string, along with `?` notation for ASCII characters:
 
 ```ruby
-# 45 bytes
-puts'this is code-golf!'[?-]?:∃golf: :'∄golf'
+# 43 bytes
+puts'this is code-golf!'[?-]?:∃golf: :∄golf
 # ∃golf
 
-# 45 bytes
-puts'this is code-golf!'[?z]?:∃golf: :'∄golf'
+# 43 bytes
+puts'this is code-golf!'[?z]?:∃golf: :∄golf
 # ∄golf
 ```
 
 ```ruby
-# 46 bytes
-puts'this is code-golf!'=~/-/?:∃golf: :'∄golf'
+# 44 bytes
+puts'this is code-golf!'=~/-/?:∃golf: :∄golf
 # ∃golf
 
-# 46 bytes
-puts'this is code-golf!'=~/z/?:∃golf: :'∄golf'
+# 44 bytes
+puts'this is code-golf!'=~/z/?:∃golf: :∄golf
 # ∄golf
 ```
 
