the the -> the typo

--- a/articles/3.md
+++ b/articles/3.md
@@ -96,7 +96,7 @@ There's a lot of information to know about `IO`, but [this blog post](https://ro
 
 Though `IO` also deals with input and output, it's often the methods from the `Kernel` module that are used, because they are normally just short-hand calls of methods from the `IO` class.
 
-For example (as explained in the blog post above), every Ruby programmer has probably used `puts` to print output with a newline after it. `puts` is actually a method from the `Kernel` module, i.e. `Kernel#puts`, and this method is essentially just the short-hand version of `$stdout.puts`, where `$stdout` is simply a global variable that references the `STDOUT` constant in the the `IO` class.
+For example (as explained in the blog post above), every Ruby programmer has probably used `puts` to print output with a newline after it. `puts` is actually a method from the `Kernel` module, i.e. `Kernel#puts`, and this method is essentially just the short-hand version of `$stdout.puts`, where `$stdout` is simply a global variable that references the `STDOUT` constant in the `IO` class.
 
 ## Kernel - `print`, `puts` and `p` <a name="kernel_-_print,_puts_and_p"></a>
 
