Move not p to separate bulletpoint

--- a/articles/3.md
+++ b/articles/3.md
@@ -127,9 +127,6 @@ A few global variables (denoted by `$`) are used in the explanations and example
   p
   #=> nil
 
-  !p
-  #=> true
-
   p 'hello'
   # "hello"
   #=> "hello"
@@ -152,6 +149,18 @@ A few global variables (denoted by `$`) are used in the explanations and example
     # 3 bytes
     nil
     #=> nil
+    ```
+
+  - Similarly, it is the shortest way to get `true`:
+
+    ```ruby
+    # 2 bytes
+    !p
+    #=> true
+
+    # 4 bytes
+    true
+    #=> true
     ```
 
   - In some cases, you can use `p` instead of `puts` to save 3 bytes, or `print` to save 4 bytes. However, note that using `p` with strings will print out surrounding `"` marks around the string, and also the preceding `:` for symbols, which might not be desirable. But it can be useful for arrays:
